@@ -1,3 +1,8 @@
+Tue Jun 22 23:10:10 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c (num_exact): fix for mathn.  [ruby-dev:41599]
+
+
 Tue Jun 22 22:00:06 2010  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/lib/socket.rb: suppress warnings.
